introduce evaluation notebook